# lumi-social-intelligence

./: LICENSE  LICENSE-DOCS.md  NOTICE.md  README.md
core/presence/: .lumi-export-manifest.json  README.md  pyproject.toml
core/presence/docs/public/: overview.md
core/presence/examples/synthetic/: basic_decision.py
core/presence/src/lumi_presence/: __init__.py  decision.py
core/presence/tests/: test_decision.py
docs/: README.md  architecture.md  article-plan.md  host-compatibility.md  licensing.md  live-surface-natural-language-controls.md  memory-provider-compatibility.md  module-release-gates.json  product-brief.md  release-boundary.md  release-checklist.md  roadmap.md
lumi_social_intelligence/: __init__.py  care_release.py  live_surface_controls.py  memory_provider.py  v02_demo_evidence.py
scripts/: audit_module_export.py  build_release_artifacts.py  build_v02_demo_evidence.py  build_v041_native_reaction_evidence.py  build_v042_care_release_evidence.py  build_v043_live_surface_readiness_evidence.py  build_v04_real_controls_evidence.py  build_v050_cache_fast_lane_evidence.py  clean_checkout_smoke.sh  generate_notebooklm_articles.py  prepare_release_candidate.py  public_readiness_audit.py  release_check.sh  validate_module_release_gates.py
tests/: test_build_v02_demo_evidence.py  test_hermes_adapter_docs.py  test_live_surface_controls.py  test_memory_provider_packets.py  test_module_export_audit.py  test_module_promotion_workflow.py  test_module_release_gates.py  test_public_readiness_audit.py  test_public_story_release_wording.py  test_roadmap_status.py  (+9 more)
(+32 files in other folders)
